fix: unify z-index values for lightbox backdrop and bar component

--- a/apps/website/app/scss/abstracts/_mixins.scss
+++ b/apps/website/app/scss/abstracts/_mixins.scss
@@ -42,5 +42,5 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.7) !important;
   backdrop-filter: blur(6px);
-  z-index: 9;
+  z-index: 1;
 }
